# hnsw-model2vec

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN-resolve-97.md  PLAN-verify-100.md  README.md  install-vcode.bat  install-vcode.sh  install.ps1  install.sh
crates/v-code/: Cargo.toml
crates/v-code-chunk/: Cargo.toml
crates/v-code-chunk/src/: c_lang.rs  cpp.rs  dispatch.rs  extern_impl.rs  go_lang.rs  java.rs  lib.rs  python.rs  rust.rs  types.rs
crates/v-code-chunk/src/extract/: chunk.rs  common.rs  lang.rs  mod.rs
crates/v-code-chunk/src/extract/tests/: callee_extract.rs  chunk.rs  common.rs  hash.rs  lang.rs  mod.rs  param_flows.rs
crates/v-code-chunk/src/tests/: common.rs  cpp.rs  extract.rs  fixtures.rs  go_lang.rs  hash.rs  mod.rs  rust.rs  typescript.rs
crates/v-code-intel/: Cargo.toml  build.rs
crates/v-code-intel/scripts/: python_calls.py
crates/v-code-intel/src/: bfs.rs  blast.rs  call_map_cache.rs  chunk_types.rs  clones.rs  context.rs  context_cmd.rs  deps.rs  dupe_analyze.rs  edge_resolve.rs  extern_types.rs  flow_cmd.rs  graph.rs  helpers.rs  impact.rs  index_tables.rs  jump.rs  lang_ir.rs  lib.rs  loader.rs  lsp.rs  lsp_client.rs  macro_expand.rs  minhash.rs  mir.rs  mir_edges.rs  parse.rs  ra_direct.rs  resolve.rs  rustdoc.rs  stats.rs  stub_workspace.rs  trace.rs  type_probes.rs
crates/v-code-intel/src/tests/: concurrency.rs  extern_types.rs  graph.rs  helpers.rs  lsp.rs  mod.rs  rustdoc.rs  stats.rs
crates/v-code/src/: cli.rs  lib.rs  main.rs
crates/v-code/src/commands/: add.rs  dupes.rs  edit.rs  embed.rs  find.rs  ingest.rs  mod.rs  rustdoc.rs  verify.rs  watch.rs
crates/v-code/src/commands/intel/: commands.rs  deps.rs  detail.rs  mod.rs
crates/v-code/src/commands/tests/: ingest.rs  verify.rs
crates/v-daemon/: Cargo.toml
crates/v-daemon/src/: client.rs  code.rs  doc.rs  handler.rs  interrupt.rs  lib.rs  main.rs  server.rs  state.rs  watcher.rs
crates/v-hnsw/: Cargo.toml
crates/v-hnsw-cli/: Cargo.toml  build.rs
crates/v-hnsw-cli/src/: chunk.rs  cli.rs  error.rs  interrupt.rs  lib.rs  main.rs  v_code_cli.rs  v_code_main.rs
crates/v-hnsw-cli/src/chunk_code/: c_lang.rs  cpp.rs  extract.rs  go_lang.rs  java.rs  mod.rs  python.rs  rust.rs  tests.rs  tests_multilang.rs  typescript.rs
crates/v-hnsw-cli/src/chunk_code/tests/: c_lang.rs  (+10 more)
crates/v-hnsw-cli/src/commands/: add.rs  bench.rs  buildindex.rs  collection.rs  common.rs  compare.rs  create.rs  db_config.rs  delete.rs  dict.rs  dupes.rs  export.rs  file_index.rs  file_utils.rs  find.rs  get.rs  import.rs  index_md.rs  indexing.rs  info.rs  ingest.rs  insert.rs  mod.rs  pipeline.rs  query_cache.rs  search.rs  search_context.rs  search_result.rs  serve.rs  update.rs  vsearch.rs
crates/v-hnsw-cli/src/tests/: chunk.rs  cli.rs  error.rs  mod.rs
crates/v-hnsw-core/: Cargo.toml
crates/v-hnsw-core/src/: error.rs  interrupt.rs  lib.rs  traits.rs  types.rs
crates/v-hnsw-core/src/tests/: error.rs  mod.rs  traits.rs  types.rs  utils.rs
crates/v-hnsw-distance/: Cargo.toml
crates/v-hnsw-distance/benches/: distance.rs
crates/v-hnsw-distance/src/: cosine.rs  dispatch.rs  dot.rs  fallback.rs  l2.rs  lib.rs  prefetch.rs  tests.rs
crates/v-hnsw-embed/: Cargo.toml
crates/v-hnsw-embed/src/: error.rs  fastembed.rs  lib.rs  mmap_model.rs  model.rs  model2vec.rs  ort_embed.rs  tests.rs
crates/v-hnsw-embed/src/tests/: error.rs  mod.rs  model.rs  model2vec.rs
crates/v-hnsw-gpu/: Cargo.toml
crates/v-hnsw-gpu/src/: backend.rs  lib.rs
crates/v-hnsw-gpu/src/kernels/: distance.rs  mod.rs
crates/v-hnsw-graph/: Cargo.toml
crates/v-hnsw-graph/benches/: hnsw.rs
crates/v-hnsw-graph/src/: config.rs  delta.rs  graph.rs  insert.rs  lib.rs  node.rs  proptests.rs  search.rs  select.rs  snapshot.rs  store.rs
crates/v-hnsw-graph/src/distance/: cosine.rs  dispatch.rs  dot.rs  fallback.rs  l2.rs  mod.rs  prefetch.rs  tests.rs
crates/v-hnsw-graph/src/gpu/: backend.rs  error.rs  mod.rs
crates/v-hnsw-graph/src/quantize/: mod.rs  sq8.rs  tests.rs
crates/v-hnsw-graph/src/tests/: config.rs  delta.rs  graph.rs  helpers.rs  insert.rs  mod.rs  node.rs  proptests.rs  search.rs  select.rs  snapshot.rs  store.rs
crates/v-hnsw-intel/: Cargo.toml
crates/v-hnsw-intel/src/: bfs.rs  clones.rs  context.rs  gather.rs  helpers.rs  lib.rs  loader.rs  reason.rs
crates/v-hnsw-quantize/: Cargo.toml
crates/v-hnsw-quantize/proptest-regressions/: tests.txt
crates/v-hnsw-quantize/src/: pq.rs  rescore.rs  tests.rs
crates/v-hnsw-rerank/: Cargo.toml  README.md
crates/v-hnsw-rerank/src/: cross_encoder.rs  lib.rs  model.rs
crates/v-hnsw-search/: Cargo.toml
crates/v-hnsw-search/src/: config.rs  hybrid.rs  korean_tokenizer.rs  lib.rs  query_cache.rs  reranker.rs  search_result.rs  tests.rs
crates/v-hnsw-search/src/bm25/: bigram.rs  fieldnorm.rs  fst_storage.rs  index.rs  maxscore.rs  mod.rs  scorer.rs  snapshot.rs
crates/v-hnsw-search/src/fusion/: convex.rs  mod.rs  rrf.rs
crates/v-hnsw-search/src/tests/: config.rs  hybrid.rs  korean_tokenizer.rs  mod.rs  search_result.rs
crates/v-hnsw-search/src/tokenizer/: filters.rs  jamo.rs  korean.rs  mod.rs  tests.rs  user_dict.rs
crates/v-hnsw-storage/: Cargo.toml
crates/v-hnsw-storage/src/: collection.rs  collection_manager.rs  daemon_client.rs  db_config.rs  distance.rs  engine.rs  fsst_text.rs  lib.rs  manifest.rs  mmap_store.rs  payload_store.rs  sq8.rs  sq8_store.rs  tests.rs  wal.rs
crates/v-hnsw-storage/src/tests/: collection.rs  collection_manager.rs  engine.rs  fsst_text.rs  manifest.rs  mmap_store.rs  mod.rs  payload_store.rs  sq8.rs  sq8_store.rs  wal.rs
crates/v-hnsw-tokenizer/: Cargo.toml
crates/v-hnsw-tokenizer/src/: filters.rs  jamo.rs  lib.rs  tests.rs  tokenizer.rs
crates/v-hnsw/src/: collection.rs  config.rs  db.rs  lib.rs  main.rs  result.rs
crates/v-lsp/: Cargo.toml
crates/v-lsp/examples/: measure_chunk_all.rs  measure_infer.rs
crates/v-lsp/src/: chunker.rs  client.rs  error.rs  instance.rs  lib.rs  shm.rs
crates/v-lsp/src/lsp/: jsonrpc.rs  mod.rs  transport.rs
crates/v-lsp/src/tests/: jsonrpc.rs  mod.rs  shm.rs
(+138 files in other folders)
