[workspace]
members = [
    "crates/v-hnsw-core",
    "crates/v-hnsw-graph",
    "crates/v-hnsw-storage",
    "crates/v-hnsw-search",
    "crates/v-hnsw-embed",
    "crates/v-hnsw-rerank",
    "crates/v-code-chunk",
    "crates/v-code-intel",
    "crates/v-hnsw-cli",
    "crates/v-hnsw",
    "crates/v-code",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeeSangMin1029/hnsw-model2vec"

[workspace.dependencies]
# Internal crates
v-hnsw-core = { path = "crates/v-hnsw-core" }
v-hnsw-graph = { path = "crates/v-hnsw-graph" }
v-hnsw-storage = { path = "crates/v-hnsw-storage" }
v-hnsw-search = { path = "crates/v-hnsw-search" }
v-hnsw-embed = { path = "crates/v-hnsw-embed" }
v-code-chunk = { path = "crates/v-code-chunk" }
v-code-intel = { path = "crates/v-code-intel" }
v-hnsw-rerank = { path = "crates/v-hnsw-rerank" }
v-hnsw-cli = { path = "crates/v-hnsw-cli" }

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }

# Parallelism
rayon = "1"
crossbeam = "0.8"

# Storage
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
crc32fast = "1"
fs2 = "0.4"

# Tokenizer (Korean)
unicode-normalization = "0.1"

# Logging
tracing = "0.1"

# Cache
lru = "0.16"

# String compression
zstd = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }

# Dev dependencies
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
# NOTE: cargo showed bincode 3.0.0, criterion 0.8.1 available
# bincode 3 used; criterion stays at 0.5 (0.8 has breaking API changes)

[profile.dev]
debug = "line-tables-only"

# Local: cargo build --profile local -p v-hnsw -p v-code  (incremental, fast iteration)
# Deploy: cargo build --release -p v-hnsw -p v-code       (full optimization)
[profile.local]
inherits = "release"
incremental = true

[profile.release]
strip = true
lto = "thin"
codegen-units = 16

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
panic = "deny"
expect_used = "warn"
todo = "warn"

