[package]
name = "v-code-intel"
description = "Code intelligence library — structural queries on code-chunked databases"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal crates
v-hnsw-core.workspace = true
v-hnsw-storage.workspace = true
v-code-chunk.workspace = true

# Error handling
anyhow = "1"

# Parallelism
rayon.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
bincode.workspace = true

# Macro expansion parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
