[package]
name = "v-code"
description = "v-code code intelligence CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "v_code"
path = "src/lib.rs"

[[bin]]
name = "v-code"
path = "src/main.rs"

[dependencies]
v-hnsw-cli = { workspace = true, features = ["code-intel"] }
v-hnsw-core.workspace = true
v-hnsw-storage.workspace = true
v-hnsw-embed.workspace = true
v-code-chunk.workspace = true
v-code-intel.workspace = true
v-hnsw-rerank.workspace = true
v-hnsw-graph.workspace = true
v-hnsw-search.workspace = true

bincode.workspace = true
clap = { workspace = true, features = ["derive"] }
anyhow = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
