[package]
name = "v-daemon"
description = "v-daemon — background daemon for model/index caching + code intelligence"
version = "0.1.0"
edition = "2024"

[lib]
name = "v_daemon"

[[bin]]
name = "v-daemon"
path = "src/main.rs"

[dependencies]
# Internal crates
v-code-intel.workspace = true
v-hnsw-core.workspace = true
v-hnsw-embed.workspace = true
v-hnsw-graph.workspace = true
v-hnsw-search.workspace = true
v-hnsw-storage.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# File locking
fs2.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Signal handling
ctrlc = "3"

[lints]
workspace = true
