[package]
name = "v-daemon"
description = "v-daemon — background daemon for model/index caching + code intelligence"
version = "0.1.0"
edition = "2024"

[lib]
name = "v_daemon"

[[bin]]
name = "v-daemon"
path = "src/main.rs"

[dependencies]
# Internal crates
v-code-intel.workspace = true
v-hnsw-core.workspace = true
v-hnsw-embed.workspace = true
v-hnsw-graph.workspace = true
v-hnsw-search = { workspace = true, features = ["korean"] }
v-hnsw-storage.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# File locking
fs2.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "7"


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }

[lints]
workspace = true
