[package]
name = "v-hnsw-cli"
description = "v-hnsw vector database CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "v-hnsw"
path = "src/main.rs"

[dependencies]
# Internal crates
v-hnsw-core.workspace = true
v-hnsw-graph.workspace = true
v-hnsw-storage.workspace = true
v-hnsw-search = { workspace = true, features = ["korean"] }
v-hnsw-embed.workspace = true

# Markdown chunking (inline module, replaces v-hnsw-chunk crate)
pulldown-cmark = "0.13"

# Code chunking (tree-sitter AST parsing)
v-hnsw-code.workspace = true
v-hnsw-intel.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
bincode.workspace = true

# Cache
lru.workspace = true

# Error handling
anyhow = "1"
thiserror = "2"

# Progress bars
indicatif = "0.17"

# Pipeline parallelism
crossbeam.workspace = true
rayon.workspace = true

# Ctrl+C handling
ctrlc = "3.4"

# Dictionary provisioning (all already in dep tree — zero additional compile)
ureq = "2"
flate2 = "1"
tar = "0.4"
md5 = "0.8"
lindera = "2.1"

# Directory walking
walkdir = "2"

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []

[lints]
workspace = true
