[package]
name = "v-hnsw-cli"
description = "v-hnsw CLI shared library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "v_hnsw_cli"
path = "src/lib.rs"

[dependencies]
# Internal crates (always needed)
v-hnsw-core.workspace = true
v-hnsw-storage.workspace = true
v-code-chunk.workspace = true
v-hnsw-embed.workspace = true

# Index & search (always available — both binaries need these)
v-hnsw-graph.workspace = true
v-hnsw-search = { workspace = true, features = ["korean"] }

# Code intelligence (optional — only v-code binary enables this)
v-code-intel = { workspace = true, optional = true }

# Markdown chunking
pulldown-cmark = "0.13"


# CLI
clap = { workspace = true, features = ["derive"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
bincode.workspace = true

# Cache
lru.workspace = true

# Error handling
anyhow = "1"
thiserror = "2"

# Progress bars
indicatif = "0.17"

# Pipeline parallelism
crossbeam.workspace = true
rayon.workspace = true

# Ctrl+C handling
ctrlc = "3.4"

# Dictionary provisioning (all already in dep tree — zero additional compile)
ureq = "2"
flate2 = "1"
tar = "0.4"
md5 = "0.8"
lindera = "2.1"

# Directory walking
walkdir = "2"

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
code-intel = ["dep:v-code-intel"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
