[package]
name = "v-hnsw-distance"
description = "SIMD-optimized distance functions for v-hnsw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
v-hnsw-core.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "distance"
harness = false

[lints]
workspace = true
