[package]
name = "v-hnsw-embed"
description = "Embedding model integration for v-hnsw using model2vec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
model2vec-rs = "0.1"
v-hnsw-core = { path = "../v-hnsw-core" }

[lints]
workspace = true
