[package]
name = "v-hnsw-embed"
description = "Embedding model integration for v-hnsw using model2vec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
v-hnsw-core = { path = "../v-hnsw-core" }

# mmap zero-copy model loading
memmap2.workspace = true
safetensors = "0.5"
tokenizers = { version = "0.21", default-features = false, features = ["onig", "progressbar", "esaxx_fast", "http"] }
half = "2.0"
serde_json = "1"
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }

[lints]
workspace = true
