[package]
name = "v-hnsw-graph"
description = "HNSW graph implementation for v-hnsw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
v-hnsw-core.workspace = true
rayon.workspace = true
tracing.workspace = true
bincode.workspace = true
cubecl = { workspace = true, optional = true }

[features]
default = []
gpu = ["dep:cubecl"]
cuda = ["gpu", "cubecl/cuda"]
wgpu = ["gpu", "cubecl/wgpu"]

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "hnsw"
harness = false

[lints]
workspace = true
