[package]
name = "v-hnsw-intel"
description = "Code intelligence library — structural queries on code-chunked databases"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal crates
v-hnsw-core.workspace = true
v-hnsw-storage.workspace = true
v-hnsw-graph.workspace = true
v-hnsw-code.workspace = true

# Error handling
anyhow = "1"

# Parallelism
rayon.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
bincode.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
