[package]
name = "v-hnsw-rerank"
description = "Cross-encoder reranker using candle (pure Rust, no ONNX)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
v-hnsw-core.workspace = true
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"
hf-hub = "0.4"
serde_json = "1"
anyhow = "1"
tracing.workspace = true

[lints]
workspace = true
