[package]
name = "v-hnsw-search"
description = "Hybrid search (Dense + BM25 + RRF) for v-hnsw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
v-hnsw-core.workspace = true
v-hnsw-graph.workspace = true
v-hnsw-storage.workspace = true
serde = { workspace = true, features = ["derive"] }
bincode.workspace = true
anyhow = "1"
lru.workspace = true
serde_json = "1"
tracing.workspace = true
bytemuck.workspace = true
memmap2.workspace = true
fst = "0.4"
rustc-hash.workspace = true
lindera = { version = "2.1", optional = true }
unicode-normalization = { workspace = true, optional = true }

[features]
default = []
korean = ["dep:lindera", "dep:unicode-normalization"]

[dev-dependencies]
proptest.workspace = true
serde_json = "1"

[lints]
workspace = true
