[package]
name = "v-hnsw-storage"
description = "Persistence layer (mmap, WAL) for v-hnsw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
v-hnsw-core.workspace = true
v-hnsw-graph.workspace = true
anyhow.workspace = true
memmap2.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
crc32fast.workspace = true
fs2.workspace = true
serde_json = "1.0.149"
roaring = "0.10"
zstd.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3.24.0"

[lints]
workspace = true
