[package]
name = "v-hnsw-tokenizer"
description = "Korean tokenizer (Lindera ko-dic) for v-hnsw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
v-hnsw-core.workspace = true
lindera = { version = "2.1", features = ["lindera-ko-dic", "embed-ko-dic"] }
unicode-normalization = "0.1"
serde = { workspace = true, features = ["derive"] }

[features]
default = ["korean"]
korean = []

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
