[package]
name = "v-lsp"
description = "Shared rust-analyzer instance with mmap IPC — no TCP overhead"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1"

# Error handling
thiserror.workspace = true

# Core utilities (strip_unc_prefix, etc.)
v-hnsw-core.workspace = true

# Shared memory
memmap2.workspace = true

# Logging
tracing.workspace = true

# Concurrency (sync channels for RA stdin/stdout threads)
crossbeam.workspace = true

# rust-analyzer as library (in-process type inference, no LSP/TCP overhead)
ra_ap_ide.workspace = true
ra_ap_load-cargo.workspace = true
ra_ap_vfs.workspace = true
ra_ap_project_model.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
