[package]
name = "v-lsp"
description = "Shared rust-analyzer instance with mmap IPC — no TCP overhead"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Core utilities (strip_unc_prefix, etc.)
v-hnsw-core = { path = "../v-hnsw-core" }

# Shared memory
memmap2 = "0.9"

# Logging
tracing = "0.1"

# Concurrency (sync channels for RA stdin/stdout threads)
crossbeam = "0.8"

# rust-analyzer as library (in-process type inference, no LSP/TCP overhead)
ra_ap_ide = "0.0.324"
ra_ap_hir-expand = { version = "0.0.324", package = "ra_ap_hir_expand" }
ra_ap_base-db = { version = "0.0.324", package = "ra_ap_base_db" }
ra_ap_load-cargo = "0.0.324"
ra_ap_vfs = "0.0.324"
ra_ap_project_model = "0.0.324"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
unwrap_used = "deny"
panic = "deny"
expect_used = "warn"
todo = "warn"
